# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
src/: bvh.cpp  bvh.h  camera.cpp  camera.h  common.h  cshader.cpp  cshader.h  load.cpp  load.h  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  model.cpp  model.h  quad.cpp  quad.h  shader.cpp  shader.h  util.cpp  util.h
src/shader/: compute_raytracing.glsl  compute_raytracing_1.glsl  compute_raytracing_5.glsl  compute_shader.glsl  compute_without_bvh.glsl  fragment_shader.glsl  fragment_shader1.glsl  simple_fragment.glsl  simple_vertex.glsl  tiny_compute.glsl  vertex_shader.glsl  vertex_shader1.glsl  weird_fragment.glsl
